tests/snapshots/examples_fixtures/type_system__failing__28_adt_nested_guard_non_exhaustive.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/28_adt_nested_guard_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/28_adt_nested_guard_non_exhaustive.flx:39:5
   |
39 |     match w {
   |     ^^^^^^^^^
40 |         Boxed(SomeI(v)) if v > 0 -> v,
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
41 |         Empty -> 0,
   | ^^^^^^^^^^^^^^^^^^^
42 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
